fix overflowing corners of first and last dropdown items

--- a/src/scss/components/_dropdowns.scss
+++ b/src/scss/components/_dropdowns.scss
@@ -19,6 +19,17 @@
   }
 }
 
+// Add border-radius to first and last visible dropdown items
+.dropdown-menu > li:first-child > .dropdown-item {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.dropdown-menu > li:last-child > .dropdown-item {
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+
 /* Improved dropdown toggle arrow */
 .dropdown-toggle {
   &::after {
